--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
+alembic==1.9.2
+attrs==22.2.0
 click==8.1.3
+exceptiongroup==1.1.0
 Flask==2.2.2
 Flask-Cors==3.0.10
+Flask-Migrate==4.0.2
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.1
+mysqlclient==2.1.1
+packaging==23.0
+pluggy==1.0.0
+pytest==7.2.1
 python-dotenv==0.21.1
 six==1.16.0
+SQLAlchemy==1.4.46
+tomli==2.0.1
 Werkzeug==2.2.2
