--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==2.1.1
 mysqlclient==2.1.1
 packaging==23.0
 pluggy==1.0.0
+PyJWT==2.6.0
 pytest==7.2.1
 python-dotenv==0.21.1
 six==1.16.0
